--- a/style.css
+++ b/style.css
@@ -39,7 +39,8 @@ body {
   padding: 1rem;
   width: 400px;
   background: rgba(255, 255, 255, 0.25);
-  box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;  backdrop-filter: blur(4px);
+  /*box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;  backdrop-filter: blur(4px);*/
+  box-shadow: rgba(9, 30, 66, 0.25) 0px 4px 8px -2px, rgba(9, 30, 66, 0.08) 0px 0px 0px 1px;
   -webkit-backdrop-filter: blur(4px);
   border-radius: 10px;
   border: 1px solid rgba(255, 255, 255, 0.18);
@@ -126,54 +127,6 @@ nav {
   font-size: 1.2rem;
 }
 
-.toggle-container {
-  margin: 11% 2%;
-  color: hsl(0, 1%, 21%);
-  font-weight: 900;
-  font-size: 6rem;
-  display: flex;
-}
-
-.toggle {
-  width: 60px;
-  height: 155px;
-  background: rgba(255, 255, 255, 0.25);
-  box-shadow: 0 8px 32px 0 rgba(117, 117, 117, 0.37);
-  backdrop-filter: blur(4px);
-  -webkit-backdrop-filter: blur(4px);
-  border-radius: 1.7rem;
-  padding: .25rem 0;
-  cursor: pointer;
-  display: flex;
-  justify-content: center;
-  transition: background-color 300ms 300ms;
-}
-
-.toggle__circle {
-  width: 50px;
-  height: 50px;
-  background-color: hsl(0, 0%, 95%);
-  border-radius: 50%;
-  margin-top: calc(155px - (.25rem * 2) - 50px);
-  transition: margin 500ms ease-in-out;
-}
-
-.toggle-text {
-  display: flex;
-  flex-direction: column;
-  line-height: .8;
-  margin-left: 1rem;
-}
-
-#check:checked + .toggle > .toggle__circle {
-  margin-top: 0;
-}
-
-#check:checked + .toggle {
-  background-color: #d3502c;
-}
-
-
 @media screen and (max-width: 768px) {
   .weather-card {
     width: 300px;
@@ -187,25 +140,6 @@ nav {
     font-size: 1.8rem;
   }
 
-  .toggle-container {
-    margin: 8% 2%;
-  }
-
-  .toggle {
-    width: 50px;
-    height: 120px;
-  }
-
-  .toggle__circle {
-    width: 40px;
-    height: 40px;
-    margin-top: calc(120px - (.25rem * 2) - 40px);
-  }
-
-  .toggle-text {
-    font-size: 3.5rem;
-    margin-left: 0.8rem;
-  }
 }
 
 
@@ -223,25 +157,5 @@ nav {
 
   .weather-data__city {
     font-size: 1.5rem;
-  }
-
-
-  .toggle-container {
-justify-content: center;  }
-
-  .toggle {
-    width: 40px;
-    height: 100px;
-  }
-
-  .toggle__circle {
-    width: 30px;
-    height: 30px;
-    margin-top: calc(100px - (.25rem * 2) - 30px);
-  }
-
-  .toggle-text {
-    font-size: 2.8rem;
-    margin-left: 0.6rem;
   }
 }
